dev/ingress/fake2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake2-ingress
  namespace: fake2-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake2.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake2-service
                port:
                  number: 20002
